# jailmaker

./: .gitignore  DEVELOPER.md  NETWORKING.md  README.md  before  build.py  jlmkr.py  jlmkr.sh  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: build.yml  test.yml
docs/: .md  README.md  basicconfig.md  commands.md  compatibility.md  incus_lxd_lxc_kvm.md  network.md  performance.md  rootless_podman_in_rootless_jail.md  storage.md  zfsmigration.md
scripts/: build.py  test.py  test_blank.sh
src/builder/app/: build_app.py  hooks_app.py  pyproject.toml
src/builder/zip/: build_zip.py  hooks_zip.py  pyproject.toml
src/jlmkr/: __about__.py  __main__.py  cli.py  data.py  paths.py
src/jlmkr/actions/: __init__.py  create.py  edit.py  exec.py  images.py  list.py  log.py  remove.py  restart.py  shell.py  start.py  startup.py  status.py  stop.py
src/jlmkr/donor/: __init__.py  data.py  jlmkr.py
src/jlmkr/utils/: KeyValueParser.py  chroot.py  config_parser.py  console.py  dataset.py  download.py  editor.py  files.py  gpu.py  jail.py  jail_dataset.py  os_release.py  parent_dataset.py
templates/docker/: README.md  config  config-nvidia
templates/incus/: README.md  config
templates/k3s/: README.md  config
templates/lxd/: README.md  config
templates/nixos/: README.md  config
templates/podman/: README.md  config
templates/router/: README.md  config  dnsmasq-example.conf
test/: README.md  examiner-config  test-jlmkr  test.sh
tests/: test_paths.py  test_utils_editor.py  test_utils_files.py
